--- a/public/linkedin.html
+++ b/public/linkedin.html
@@ -2,7 +2,6 @@
 <html>
 
   <head>
-    <title>NodeJS Starter Application</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,15 +16,9 @@
 
   <body>
     <div class="container">
-      <h1>External API Usage</h1>
-      <h3>LinkedIn</h3>
-        <a href='/info/linkedin'>
-          <img src="images/LinkedIn_image.png" class="img-rounded" alt="LinkedIn" width="150" height="150">
-        </a>
-      <h3>Facebook</h3>
-        <img src="" class="img-rounded" alt="Facebook" width="150" height="150">
-      <h3>Instagram</h3>
-        <img src="" class="img-rounded" alt="Instagram" width="150" height="150">
+      <h1>Giulio Montenero</h1>
+      <h3>LinkedIn info</h3>
+        <img src="images/LinkedIn_image.png" class="img-rounded" alt="LinkedIn" width="150" height="150">
     </div>
   </body>
 
