working and deploying on bluemix

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <h1>External API Usage</h1>
       <h3>LinkedIn</h3>
         <a href='/info/linkedin'>
-          <img src="images/LinkedIn_image.png" class="img-rounded" alt="LinkedIn" width="150" height="150">
+          <img src="/images/LinkedIn_image.png" class="img-rounded" alt="LinkedIn" width="150" height="150">
         </a>
       <h3>Facebook</h3>
         <img src="" class="img-rounded" alt="Facebook" width="150" height="150">
