--- a/public/linkedin.html
+++ b/public/linkedin.html
@@ -18,7 +18,7 @@
     <div class="container">
       <h1>Giulio Montenero</h1>
       <h3>LinkedIn info</h3>
-        <img src="images/LinkedIn_image.png" class="img-rounded" alt="LinkedIn" width="150" height="150">
+        <img src="/images/LinkedIn_image.png" class="img-rounded" alt="LinkedIn" width="150" height="150">
     </div>
   </body>
 
