almost finished - database storing data commented

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
         <a href='/info/facebook'>
           <img src="/images/Facebook_image.png" class="img-rounded" alt="Facebook" width="150" height="150">
         </a>
-      <h3>Instagram</h3>
-        <img src="" class="img-rounded" alt="Instagram" width="150" height="150">
+      <!-- <h3>Instagram</h3>
+        <img src="" class="img-rounded" alt="Instagram" width="150" height="150"> -->
     </div>
   </body>
 
