--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,44 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   </head>
+
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $("#phraseoftheday").click(function () {
+        $.ajax({
+    			type: "GET",
+    			url: "/curiosity",
+    			//data: {},
+    			async: true,
+    			dataType: "application/json"
+  		  }).always(function(response){
+            var result = response.responseText;
+  			     if(response.status == 200 && response.readyState == 4){
+				         alert(JSON.parse(result).value);
+  			     }
+  			     else {
+  			          alert("An error occurred during the operation!");
+  			     }
+  		    });
+      });
+    });
+  </script>
 
   <body>
     <div class="container">
       <h1>External API Usage</h1>
       <h3>LinkedIn</h3>
         <a href='/info/linkedin'>
-          <img src="/images/LinkedIn_image.png" class="img-rounded" alt="LinkedIn" width="150" height="150">
+          <img src="/images/LinkedIn_image.png" class="img-rounded" alt="LinkedIn" width="100" height="100">
         </a>
       <h3>Facebook</h3>
         <a href='/info/facebook'>
-          <img src="/images/Facebook_image.png" class="img-rounded" alt="Facebook" width="150" height="150">
+          <img src="/images/Facebook_image.png" class="img-rounded" alt="Facebook" width="100" height="100">
         </a>
-      <!-- <h3>Instagram</h3>
-        <img src="" class="img-rounded" alt="Instagram" width="150" height="150"> -->
+      <h3>Did you know...</h3>
+          <img id='phraseoftheday' src="/images/keep_calm_and_click_on.png" class="img-rounded" alt="What's going on?" width="100" height="100">
     </div>
   </body>
 
