--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         <a href='/info/facebook'>
           <img src="/images/Facebook_image.png" class="img-rounded" alt="Facebook" width="100" height="100">
         </a>
-      <h3>Did you know...</h3>
+      <h3>Do you know that...</h3>
           <img id='phraseoftheday' src="/images/keep_calm_and_click_on.png" class="img-rounded" alt="What's going on?" width="100" height="100">
     </div>
   </body>
